--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "uid2": "^0.0.3"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.6",
+    "typescript": "^4.2.4"
   }
 }
